# merovingian

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/merovingian/: __init__.py  config.py
src/merovingian/cli/: __init__.py  app.py
src/merovingian/core/: __init__.py  differ.py  impact.py  registry.py  scanner.py  store.py
src/merovingian/mcp/: __init__.py  __main__.py  formatters.py  server.py
src/merovingian/models/: __init__.py  contracts.py  enums.py
tests/: conftest.py  test_cli.py  test_config.py  test_differ.py  test_formatters.py  test_impact.py  test_mcp_server.py  test_models.py  test_registry.py  test_scanner.py  test_store.py
